# lms-system-build

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/core/: access.py  audit.py  config.py  db.py  deps.py  security.py
backend/routers/: admin.py  audit.py  auth.py  courses.py  enrollments.py  files.py  grades.py  homework.py  leads.py  quizzes.py  search.py
backend/scripts/: init_db.py  seed.py
backend/services/: email.py
backend/storage/: local.py
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  landing.module.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/admin/audit-logs/: page.tsx
frontend/app/admin/leads/: page.tsx
frontend/app/admin/users/: page.tsx
frontend/app/components/: AppFooter.tsx  AppHeader.tsx  AppProviders.tsx  AppSidebar.tsx  SidebarContext.tsx  app-shell.tsx  auth-brand.tsx  course-card.tsx  page-shell.tsx  shell.tsx  ui.tsx
frontend/app/courses/: page.tsx
frontend/app/courses/[id]/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/items/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/app/reset-password/: page.tsx
frontend/app/search/: page.tsx
frontend/app/teacher/: page.tsx
frontend/app/teacher/courses/: page.tsx
frontend/lib/: api.ts  auth.tsx  i18n.tsx
frontend/public/: 2gis-map.html
(+2 files in other folders)
